# Digital-Bird-Stress-Twin

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  COMPLETE_GUIDE.md  COMPLETE_SUMMARY.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FINAL_ENHANCEMENTS_COMPLETE.md  LICENSE  MAJOR_ENHANCEMENTS_V2.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SYSTEM_ARCHITECTURE.md  TOMORROW_IO_INTEGRATION.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_direct_api.py  test_disaster_collection.py  test_tomorrow_io.py
configs/: config.yaml  species_config.yaml
scripts/: collect_data.py
src/: __init__.py  dataset_creator.py  train.py
src/api/: __init__.py  main.py
src/data_ingestion/: __init__.py  base_client.py  disaster_client.py  ebird_client.py  weather_client.py  xenocanto_client.py
src/feature_engineering/: __init__.py  audio_features.py  environmental_features.py  stress_index.py
src/models/: __init__.py  lstm_model.py  trainer.py  vae_model.py
src/monitoring/: __init__.py  drift_detection.py
src/utils/: __init__.py  config.py  validators.py
ui/: README.md  __init__.py
ui/pages/: __init__.py  audio_analysis.py  data_analysis.py  data_collection.py  home.py  live_monitoring.py  mlflow_dashboard.py  model_training.py  predictions.py  settings.py
